# docx-mcp

./: .dockerignore  .gitignore  .output.txt  Cargo.toml  Dockerfile  LICENSE.md  README.md  compose.dev.yaml  compose.yaml  docker-entrypoint.sh  mcp_inspect.py  requirements.txt  rust-toolchain.toml
.github/workflows/: ci.yml
crates/lib/docx-core/: Cargo.toml
crates/lib/docx-core/src/: control.rs  lib.rs  services.rs
crates/lib/docx-core/src/control/: data.rs  ingest.rs  metadata.rs  mod.rs
crates/lib/docx-core/src/parsers/: csharp_xml.rs  mod.rs  rustdoc_json.rs
crates/lib/docx-core/src/store/: mod.rs  surreal.rs
crates/lib/docx-core/tests/: rustdoc_ingest.rs
crates/lib/docx-core/tests/data/: docx_store.json  docx_store_min.json
crates/lib/docx-ingest/: Cargo.toml
crates/lib/docx-ingest/src/: lib.rs
crates/lib/docx-mcp/: Cargo.toml  skills.md
crates/lib/docx-mcp/src/: helpers.rs  lib.rs  server.rs
crates/lib/docx-mcp/src/tools/: context.rs  data.rs  ingest.rs  metadata.rs  mod.rs
crates/lib/docx-store/: Cargo.toml
crates/lib/docx-store/schema/: M0001_INIT.surql  canonical_schema.md  dotnet_xml_mapping.md  rustdoc_json_mapping.md  surrealdb.surql
crates/lib/docx-store/src/: lib.rs  models.rs  schema.rs
scripts/: .env.example  run-debug.sh
tests/: test_mcp_inspector.py
