[workspace]
resolver = "3"
members = [
    "crates/bin/*",
    "crates/lib/*"
]

[workspace.package]
version = "0.1.0"
authors = ["Lance Wallis <walance.pvas.me>"]
edition = "2024"
repository = "https://github.com/BarronKane/docx-mcp"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
rmcp = { workspace = true, features = ["server", "transport-io", "macros"]}
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = { version = "2.6.0", features = ["default"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
toml = "0.9.11+spec-1.1.0"
tracing = "0.1"

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = "deny"
cargo = "deny"
nursery = "deny"
pedantic = "deny"
