[workspace]
resolver = "3"
members = [
    "crates/bin/*",
    "crates/lib/*"
]

[workspace.package]
version = "0.1.0"
authors = ["Lance Wallis <walance.pvas.me>"]
edition = "2024"
repository = "https://github.com/BarronKane/docx-mcp"
license = "MIT"
rust-version = "1.89"

[workspace.dependencies]
clap = { version = "4.5.45", features = ["derive", "env"] }
rmcp = { version = "0.14.0", features = ["server", "transport-io", "transport-streamable-http-server", "macros"]}
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = {  version = "1.0.149" }
surrealdb = { version = "2.6.0", features = ["default", "kv-mem"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
toml = "0.9.11+spec-1.1.0"
tracing = "0.1"
axum = { version = "0.7.9", features = ["json"] }

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"


