[package]
name = "docx-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
docx-store = { path = "../docx-store" }
roxmltree = "0.20"
serde.workspace = true
surrealdb.workspace = true
tokio.workspace = true

[lints]
workspace = true
