[package]
name = "docx-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types and helpers for docx-mcp."
readme = "../../../README.md"
keywords = ["docx", "mcp", "core"]
categories = ["development-tools"]

[lib]
crate-type = ["rlib"]

[dependencies]
docx-store = { path = "../docx-store" }
roxmltree = "0.20"
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
