[package]
name = "docx-ingest"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP ingest server for docx-mcp."
readme = "../../../README.md"
keywords = ["docx", "ingest", "server"]
categories = ["development-tools"]

[lib]
crate-type = ["rlib"]

[dependencies]
axum.workspace = true
docx-core = { path = "../docx-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
surrealdb.workspace = true

[lints]
workspace = true
