[package]
name = "docx-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
docx-core = { path = "../docx-core" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
