[package]
name = "docx-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP tools and helpers for docx-mcp."
readme = "../../../README.md"
keywords = ["docx", "mcp", "tools"]
categories = ["development-tools"]

[lib]
crate-type = ["rlib"]

[dependencies]
docx-core = { path = "../docx-core" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
axum.workspace = true
tokio.workspace = true

[lints]
workspace = true
