[package]
name = "docx-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Storage models and schema helpers for docx-mcp."
readme = "../../../README.md"
keywords = ["docx", "mcp", "database"]
categories = ["database", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
